--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -13,9 +13,13 @@
     "@mui/icons-material": "^5.15.19",
     "@mui/material": "^5.15.20",
     "@reduxjs/toolkit": "^2.8.2",
+    "i18next": "^25.5.2",
+    "i18next-browser-languagedetector": "^8.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^9.2.0"
+    "react-i18next": "^15.7.3",
+    "react-redux": "^9.2.0",
+    "react-router-dom": "^6.25.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
